[workspace]
members = [
    "bytecheck",
    "bytecheck_derive",
    "bytecheck_test",
]
resolver = "2"

[workspace.package]
version = "0.6.12"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/bytecheck"
repository = "https://github.com/djkoloski/bytecheck"

[workspace.dependencies]
bytecheck_derive = { version = "0.6.12", path = "bytecheck_derive", default-features = false }
