[workspace]
members = [
    "bytecheck",
    "bytecheck_derive",
]
resolver = "2"

[workspace.package]
version = "0.8.0-rc.2"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2021"
rust-version = "1.81"
license = "MIT"
readme = "README.md"
repository = "https://github.com/rkyv/bytecheck"
keywords = ["no_std", "validation", "serialization"]
categories = ["encoding", "no-std", "no-std::no-alloc"]

[workspace.dependencies]
bytecheck = { version = "=0.8.0-rc.2", path = "bytecheck", default-features = false }
bytecheck_derive = { version = "=0.8.0-rc.2", path = "bytecheck_derive", default-features = false }
proc-macro2 = { version = "1", default-features = false }
ptr_meta = { version = "=0.3.0-rc.2", default-features = false }
rancor = { version = "=0.1.0-rc.2", default-features = false }
simdutf8 = { version = "0.1", default-features = false }
syn = { version = "2", default-features = false }
quote = { version = "1", default-features = false }

[patch.crates-io]
ptr_meta = { git = "https://github.com/rkyv/ptr_meta" }
rancor = { git = "https://github.com/rkyv/rancor" }
