[package]
name = "bytecheck"
description = "Derive macro for bytecheck"
documentation = "https://docs.rs/bytecheck"
keywords = ["bytecheck", "validation", "zero-copy", "rkyv"]
categories = ["encoding"]
readme = "crates-io.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecheck_derive.workspace = true
ptr_meta = { version = "0.1", default-features = false }
simdutf8 = { version = "0.1", default-features = false, optional = true }

# Support for various common crates. These are primarily to get users off the ground and build some
# momentum.

# These are NOT PLANNED to remain in bytecheck for the final release. Much like serde, these
# implementations should be moved into their respective crates over time. Before adding support for
# another crate, please consider getting bytecheck support in the crate instead.

uuid = { version = "1.3", optional = true }

[features]
default = ["simdutf8", "std"]
verbose = []
std = ["ptr_meta/std", "bytecheck_derive/std", "simdutf8/std"]
