[package]
name = "bytecheck_derive"
version = "0.6.3"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2018"
description = "Derive macro for bytecheck"
license = "MIT"
documentation = "https://docs.rs/bytecheck_derive"
repository = "https://github.com/djkoloski/bytecheck"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"

[features]
default = ["std"]
std = []
