[package]
name = "bytecheck_test"
version = "0.6.9"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2018"
description = "Test suite for bytecheck crates"
license = "MIT"
repository = "https://github.com/djkoloski/bytecheck"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecheck = { version = "0.7", path = "../bytecheck", default-features = false }
ptr_meta = "~0.1.4"

[features]
default = ["std"]
verbose = ["bytecheck/verbose"]
std = ["bytecheck/std"]
