[package]
name = "bytecheck_test"
description = "Test suite for bytecheck crates"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecheck = { path = "../bytecheck", default-features = false }
ptr_meta = "~0.1.4"

[features]
default = ["std"]
verbose = ["bytecheck/verbose"]
std = ["bytecheck/std"]
